# fastapi-utils

./: .gitignore  CLAUDE.md  README.md  __init__.py  main.py  pyproject.toml  static_files.py
fastapi_toolbox/: __init__.py  config.py  logging.py  server.py
