[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-utils"
version = "0.1.0"
description = "Common utilities for FastAPI applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0"
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
keywords = ["fastapi", "starlette", "web", "utilities"]

[project.urls]
Homepage = "https://github.com/yourusername/fastapi-utils"
Repository = "https://github.com/yourusername/fastapi-utils.git"
Issues = "https://github.com/yourusername/fastapi-utils/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["main.py"]
