[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-toolbox"
version = "0.6.0"
description = "Common utilities for FastAPI applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "loguru",
    "starlette",
    "uvicorn",
]
authors = [
    {name = "wynemo", email = "ggdabin@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
keywords = ["fastapi", "starlette", "web", "utilities"]

[project.urls]
Homepage = "https://github.com/wynemo/fastapi-utils"
Repository = "https://github.com/wynemo/fastapi-utils.git"
Issues = "https://github.com/wynemo/fastapi-utils/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["CLAUDE.md", ".python-version", ".gitignore", "pyproject.toml", "README.md"]
